add header style and made grid

--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,108 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Open+Sans" rel="stylesheet">
     <script src="js/common.js"></script>
     <title>Document</title>
 </head>
 <body>
+
+    <!-- header -->
+    <header class="header">
+        <div class="container">
+            <a class="header__logo" href="#">
+                <h1><span>stripes</span> <span class="green">*/</span></h1>
+            </a>
+            <nav class="header__navigation">
+                <ul class="listreset">
+                    <li><a class="active" href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">References</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <!-- main -->
+    <main>
+
+        <section class="hero">
+            <div class="container">
+
+                <article class="hero__article">
+                    <h3 class="article__title">
+                        <span>Can User Experience Be Beautiful? An Analysis Of Navigation In Portfolio Websites</span>
+                    </h3>
+                    <div class="article__description">
+                        <p>This is a different take on Responsive Web design. elephant in the room; that is, how we can rely on media queries and <a href="#">breakpoints</a> without any concern for devices.</p>
+                    </div>
+                    <div class="article__description">
+                        <p>Let’s start our journey by looking at the online tools such as Responsive Design Testing, Responsive.is, Responsinator and BriCSS. This article discusses how we can better.</p>
+                        <a href="#" class="btn">more >></a>
+                    </div>
+                </article>
+
+                <div class="hero__video">
+                    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam perspiciatis fugiat est, temporibus vero expedita, </h1>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="icon__holder">
+                            icon.img
+                        </div>
+                        <h3 class="title">MARKETING <span class="green">PlANS</span></h3>
+                        <div class="description">
+                            <p>Lorem ipsum dolor sit amet, consectuer adipiscing elit. Aenean commodo.</p>
+                        </div>
+                        <a href="#" class="btn">more >></a>
+                    </div>
+                    <div class="col">
+                        <div class="icon__holder">
+                            icon.img
+                        </div>
+                        <h3 class="title">CREATION  <span class="green">LAB</span></h3>
+                        <div class="description">
+                            <p>Lorem ipsum dolor sit amet, consectuer adipiscing elit. Aenean commodo.</p>
+                        </div>
+                        <a href="#" class="btn">more >></a>
+                    </div>
+                    <div class="col">
+                        <div class="icon__holder">
+                            icon.img
+                        </div>
+                        <h3 class="title">RESPONSIVE  <span class="green">WEB</span></h3>
+                        <div class="description">
+                            <p>Lorem ipsum dolor sit amet, consectuer adipiscing elit. Aenean commodo.</p>
+                        </div>
+                        <a href="#" class="btn">more >></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
+
+    <!-- footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="copiryght">
+                <span>© copyright</span>
+            </div>
+            <ul class="social__icons listreset">
+                <li><a href="#">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+            </ul>
+        </div>
+    </footer>
+
 
 </body>
 </html>
